# tissue-map-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: 0_merfish_mouse_ileum.py  1_merfish_mouse_ileum.py  demo.py  merfish_mouse_ileum.py
examples/gloms/: gloms.py
examples/invasive/: ome_tiff_to_sharded_meshes.py
examples/melanoma/: ome_tiff_to_sharded_meshes.py
examples/merfish_mouse_ileum/: 0_raw_to_spatialdata.py  1_spatialdata_to_precomputed.py  2_view.py  3_precomputed_to_spatialdata.py
experiments/: README.md  mesh_operations.py  subvolume_analysis.py
experiments/examples/: gloms_subvolume_analysis.py  old_demo_gloms.py
experiments/mesher_third_party/: LICENSE_multiresolution-mesh-creator  mesher.py
src/tissue_map_tools/: __init__.py  _util.py  converters.py  igneous_converters.py  mesh_util.py  shard_util.py  view.py
src/tissue_map_tools/data_model/: annotations.py  annotations_utils.py  mesh.py  mesh_info.py  print.py  sharded.py
tests/data_model/: test_annotations.py  test_mesh.py  test_mesh_info.py  test_sharded.py
